# Vulkan-CCO-Arterial-Visualization-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: app.h  vertex.h  vtk_reader.h
shaders/: frag.glsl  vert.glsl
src/: app.cpp  main.cpp  vtk_reader.cpp
